Added assignment and data for ELEC475 2016

--- a/RippleDetection/Compare (Actual) Online and Offline Ripple Detection.ipynb
+++ b/RippleDetection/Compare (Actual) Online and Offline Ripple Detection.ipynb
@@ -49,7 +49,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "data = scipy.io.loadmat(os.path.join('SampleData/4.mat'),\n",
+    "data = scipy.io.loadmat(os.path.join('SampleData/thresh4.mat'),\n",
     "                               struct_as_record=False, squeeze_me=True)\n"
    ]
   },
